@@ -1,3 +1,12 @@
+2007-06-18  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* src/lib/gsudoku.py: Set number popup transient for the
+	main window. (bug #406767)
+
+2007-06-17  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* src/lib/gnome_sudoku.py: Store highlight setting in gconf (bug #445590)
+
 2007-06-13  Thomas H.P. Andersen  <phomes@gmail.com>
 
 	* src/lib/gsudoku.py: Don't allow grey fields to be changed by mouse
